EXTRA_DIST = \
	librevenge-generators.h \
	RVNGHTMLTextGenerator.h \
	RVNGRawDrawingGenerator.h \
	RVNGRawPresentationGenerator.h \
	RVNGRawTextGenerator.h \
	RVNGSVGDrawingGenerator.h \
	RVNGSVGPresentationGenerator.h \
	RVNGTextDrawingGenerator.h \
	RVNGTextPresentationGenerator.h \
	RVNGTextTextGenerator.h
