EXTRA_DIST = \
	librevenge-generators.h \
	RVNGHTMLTextGenerator.h \
	RVNGRawDrawingGenerator.h \
	RVNGRawPresentationGenerator.h \
	RVNGRawSpreadsheetGenerator.h \
	RVNGRawTextGenerator.h \
	RVNGSVGPresentationGenerator.h \
	RVNGTextDrawingGenerator.h \
	RVNGTextPresentationGenerator.h \
	RVNGTextTextGenerator.h
