EXTRA_DIST =				\
	librevenge-generators.h		\
	librevenge-generators-api.h	\
	RVNGCSVSpreadsheetGenerator.h	\
	RVNGHTMLTextGenerator.h		\
	RVNGRawDrawingGenerator.h	\
	RVNGRawPresentationGenerator.h	\
	RVNGRawSpreadsheetGenerator.h	\
	RVNGRawTextGenerator.h		\
	RVNGSVGPresentationGenerator.h	\
	RVNGTextDrawingGenerator.h	\
	RVNGTextPresentationGenerator.h	\
	RVNGTextSpreadsheetGenerator.h	\
	RVNGTextTextGenerator.h
