EXTRA_DIST = \
	librevenge.h \
	librevenge-api.h \
	RVNGBinaryData.h \
	RVNGDrawingInterface.h \
	RVNGPresentationInterface.h \
	RVNGProperty.h \
	RVNGPropertyList.h \
	RVNGPropertyListVector.h \
	RVNGSpreadsheetInterface.h \
	RVNGString.h \
	RVNGStringVector.h \
	RVNGSVGDrawingGenerator.h \
	RVNGTextInterface.h
